# Digital-Logic-Simulator

./: .gitignore  AndGate.cpp  AndGate.h  CMakeLists.txt  Gate.cpp  Gate.h  Makefile  NANDGate.cpp  NANDGate.h  NORGate.cpp  NORGate.h  Node.cpp  Node.h  OrGate.cpp  OrGate.h  README.md  Simulator.cpp  Simulator.h  XNORGate.cpp  XNORGate.h  XORGate.cpp  XORGate.h  d.out  main.cpp  test.cir
include/: AndGate.h  Gate.h  NANDGate.h  Node.h  OrGate.h  Simulator.h  XORGate.h
src/: AndGate.cpp  Gate.cpp  Gate.h  GateFactory.cpp  GateFactory.h  NANDGate.cpp  NANDGate.h  NORGate.cpp  NOTGate.cpp  NOTGate.h  Node.cpp  OrGate.cpp  Simulator.cpp  Simulator.h  XNORGate.cpp  XNORGate.h  XORGate.cpp  main.cpp
